--- a/styles/light/_light-theme.scss
+++ b/styles/light/_light-theme.scss
@@ -123,9 +123,9 @@ h6,
 
 // Navigation ------------------------------------------------------------------
 
-a:not(.bds-link):not(.bds-card-offgrid):not(.bds-btn),
-nav a:not(.bds-link):not(.bds-card-offgrid):not(.bds-btn),
-a:not([role="button"]):not(.bds-link):not(.bds-card-offgrid):not(.bds-btn) {
+a:not(.bds-link):not(.bds-card-offgrid):not(.bds-card-icon):not(.bds-btn),
+nav a:not(.bds-link):not(.bds-card-offgrid):not(.bds-card-icon):not(.bds-btn),
+a:not([role="button"]):not(.bds-link):not(.bds-card-offgrid):not(.bds-card-icon):not(.bds-btn) {
   color: $light-fg;
 
   &.btn-primary {
